--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
-    margin:0;
-    background:darkgray;
-    overflow:hidden;
-    text-align:center;
+   margin:0;
+   background:darkgray;
+   overflow:hidden;
+   text-align:center;
 }
-#myCanvas{
-    background:lightgray;
+#carCanvas{
+   background:lightgray;
+}
+#networkCanvas{
+   background:black;
 }
